grafana-ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    cloudformation grafana influxdb
   
Resources:
    grafanaInfluxdbInstance:
        Type: "AWS::EC2::Instance"
        Properties:                                                          
            ImageId: ami-0d0eaed20348a3389
            InstanceType: t2.nano                        
            Monitoring: true                                    
            SecurityGroups:
                - !Ref grafanaSg
            KeyName: grafana   
            UserData:
                Fn::Base64: |
                     #!/bin/bash
                        echo "Install grafana" 
                        sudo apt-get install -y apt-transport-https
                        sudo apt-get install -y software-properties-common
                        wget -q -O - https://packages.grafana.com/gpg.key | sudo apt-key add -
                        sudo add-apt-repository "deb https://packages.grafana.com/oss/deb stable main"
                        sudo apt-get update && sudo apt-get install -y grafana
                        sudo systemctl daemon-reload
                        sudo systemctl start grafana-server  
                        echo "Install influxdb"
                        wget -qO- https://repos.influxdata.com/influxdb.key | sudo apt-key add -
                        source /etc/lsb-release
                        echo "deb https://repos.influxdata.com/${DISTRIB_ID,,} ${DISTRIB_CODENAME} stable" | sudo tee /etc/apt/sources.list.d/influxdb.list
                        sudo apt-get update && sudo apt-get install -y influxdb
                        sudo systemctl unmask influxdb.service
                        sudo systemctl start influxdb                                              
                                        

    grafanaSg:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: Security group for grafana-influxdb #required                        
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 8086
                  ToPort: 8086
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 3000
                  ToPort: 3000
                  CidrIp: 0.0.0.0/0
